--- a/src/index.styl
+++ b/src/index.styl
@@ -1,6 +1,27 @@
 body
     font-family: 'lato', sans-serif
     margin: 0
+    font-size: 14pt
+
+button
+    background-color: #6C596E
+    color: white
+    padding: 25px
+    width: 100%
+    font-weight: 900
+    border: none
+    border-radius: 10px
+    font-size: 13pt
+    cursor: pointer
+    transition: transform 0.3s
+
+    &:hover
+        background-color: #534454
+        transform: scale(1.02)
+
+    &:active
+        background-color: #816e83
+        transform: scale(0.9)
 
 .header
     background-color: #32021F
@@ -9,3 +30,28 @@ body
     text-align: center
     font-weight: 900
     font-size: 30pt
+
+.products-container
+    width: 800px
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    margin: auto
+    grid-gap: 20px
+    margin-top: 50px
+
+    .product
+        border: 5px solid #32021F
+        border-radius: 10px
+        padding: 10px
+        text-align: center
+        color: #6C596E
+
+        .title
+            margin-top: 10px
+
+        img
+            width: 100%
+
+        .price
+            margin-top: 10px
+            margin-bottom: 10px
