--- a/src/index.styl
+++ b/src/index.styl
@@ -23,6 +23,28 @@ button
         background-color: #816e83
         transform: scale(0.9)
 
+.button-link
+    background-color: #6C596E
+    color: white
+    padding: 25px
+    width: 100%
+    font-weight: 900
+    border: none
+    border-radius: 10px
+    font-size: 13pt
+    cursor: pointer
+    transition: transform 0.3s
+    text-decoration: none
+    box-sizing: border-box
+
+    &:hover
+        background-color: #534454
+        transform: scale(1.02)
+
+    &:active
+        background-color: #816e83
+        transform: scale(0.9)
+
 .header
     background-color: #32021F
     color: white
@@ -30,6 +52,7 @@ button
     text-align: center
     font-weight: 900
     font-size: 30pt
+    margin-bottom: 100px
 
 .products-container
     width: 800px
@@ -37,7 +60,6 @@ button
     grid-template-columns: repeat(3, 1fr)
     margin: auto
     grid-gap: 20px
-    margin-top: 50px
 
     .product
         border: 5px solid #32021F
@@ -45,6 +67,7 @@ button
         padding: 10px
         text-align: center
         color: #6C596E
+        display: grid
 
         .title
             margin-top: 10px
@@ -55,3 +78,33 @@ button
         .price
             margin-top: 10px
             margin-bottom: 10px
+
+.footer
+    background-color: #32021F
+    color: white
+    padding: 20px 50px
+    text-align: center
+    font-weight: 900
+    font-size: 16pt
+    margin-top: 100px
+
+    a
+        text-decoration: none
+        color: white
+
+
+        &:first-child
+            margin-right: 30px
+
+        &:not(:first-child)
+            margin-left: 30px
+
+.about-us
+    text-align: center
+    max-width: 500px
+    margin: auto
+
+.product-details
+    text-align: center
+    max-width: 500px
+    margin: auto
