--- a/src/index.styl
+++ b/src/index.styl
@@ -92,10 +92,6 @@ button
         text-decoration: none
         color: white
 
-
-        &:first-child
-            margin-right: 30px
-
         &:not(:first-child)
             margin-left: 30px
 
@@ -108,3 +104,21 @@ button
     text-align: center
     max-width: 500px
     margin: auto
+
+.login-container
+    display: grid
+    max-width: 600px
+    margin: auto
+    grid-template-columns: 1fr 1fr
+    grid-column-gap: 15px
+
+    h1
+        margin-top: 0
+
+    h1
+    .initial-text
+        grid-column: 1 / 3
+        text-align: center
+
+    .initial-text
+        margin-bottom: 50px
