--- a/src/index.styl
+++ b/src/index.styl
@@ -1,10 +1,12 @@
+mainColor = #6C596E
+
 body
     font-family: 'lato', sans-serif
     margin: 0
     font-size: 14pt
 
 button
-    background-color: #6C596E
+    background-color: mainColor
     color: white
     padding: 25px
     width: 100%
@@ -23,8 +25,13 @@ button
         background-color: #816e83
         transform: scale(0.9)
 
+input
+    padding: 15px
+    border: 2px solid mainColor
+    border-radius: 10px
+
 .button-link
-    background-color: #6C596E
+    background-color: mainColor
     color: white
     padding: 25px
     width: 100%
@@ -66,7 +73,7 @@ button
         border-radius: 10px
         padding: 10px
         text-align: center
-        color: #6C596E
+        color: mainColor
         display: grid
 
         .title
@@ -122,3 +129,10 @@ button
 
     .initial-text
         margin-bottom: 50px
+
+.login-form
+.register-form
+    display: grid
+    grid-row-gap: 20px
+    margin-top: 30px
+    grid-template-rows: repeat(5, auto)
